--- a/bookstore-payment-service/pom.xml
+++ b/bookstore-payment-service/pom.xml
@@ -119,6 +119,18 @@
                         </goals>
                     </execution>
                 </executions>
+                <dependencies>
+					<dependency>
+						<groupId>org.codehaus.plexus</groupId>
+						<artifactId>plexus-archiver</artifactId>
+						<version>3.4</version>
+					</dependency>
+					<dependency>
+						<groupId>javax.activation</groupId>
+						<artifactId>javax.activation-api</artifactId>
+						<version>1.2.0</version>
+					</dependency>
+				</dependencies>
                 <configuration>
                     <skip>${skip-docker-plugin}</skip>
                     <repository>${docker-image-name}</repository>
