--- a/bookstore-billing-service/src/main/resources/bootstrap.yml
+++ b/bookstore-billing-service/src/main/resources/bootstrap.yml
@@ -24,7 +24,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${EUREKA_HOST:localhost:8761}/eureka/
-    registerWithEureka: true
+    registerWithEureka: false
+    fetch-registry: false
     enabled: true #eureka discovery is enabled in this profile
   instance:
     prefer-ip-address: false
